# Final-Project

./: Automaton.h  CMakeLists.txt  ColonDashAutomaton.h  CommentAutomaton.cpp  CommentAutomaton.h  Database.h  DatalogProgram.cpp  DatalogProgram.h  FactsAutomaton.cpp  FactsAutomaton.h  Graph.cpp  Graph.h  Header.h  IDAutomaton.cpp  IDAutomaton.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Node.h  Parameter.h  Parser.cpp  Parser.h  Predicate.cpp  Predicate.h  QueriesAutomaton.cpp  QueriesAutomaton.h  Relation.cpp  Relation.h  Rule.cpp  Rule.h  RulesAutomaton.cpp  RulesAutomaton.h  SchemesAutomaton.cpp  SchemesAutomaton.h  SingleSymbolAutomaton.cpp  SingleSymbolAutomaton.h  StringAutomaton.cpp  StringAutomaton.h  Token.cpp  (+3 more)
